MDEV-4296 Assertion `n_linear_rings > 0' fails in Gis_polygon::centroid_xy.         Forgotten DBUG_ASSERT should be replaced with the 'return error'.